python3.13 (3.13.0~rc2-1) UNRELEASED; urgency=medium

  * Python 3.13.0 release candidate 2.

 -- Stefano Rivera <stefanor@debian.org>  Sat, 07 Sep 2024 08:50:45 +0200

python3.13 (3.13.0~rc1-4) unstable; urgency=medium

  * python3.x-tk: Make byte-compilation depend on the availability of
    the interpreter.

 -- Matthias Klose <doko@debian.org>  Thu, 22 Aug 2024 15:07:31 +0200

python3.13 (3.13.0~rc1-3) unstable; urgency=medium

  * Add python3.x-tk maintainer scripts.
  * Call dpkg with LC_ALL=C.UTF8 set.

 -- Matthias Klose <doko@debian.org>  Thu, 22 Aug 2024 09:53:05 +0200

python3.13 (3.13.0~rc1-2) experimental; urgency=medium

  [ Stefano Rivera ]
  * Drop patch ctypes-arm. Superseded upstream in 2.7.5.
  * Drop patch fix-py_compile. Superseded upstream in 3.11.
  * Drop patch sphinx3, superseded upstream in 3.10.
  * Expand on patch comments.
  * Forward some patches.
  * Update pydoc-use-pager patch.

  [ Matthias Klose ]
  * Build python3.13-gdbm and python3.13-tk packages again; Having these
    extensions hidden in the libpython-stdlib packages raises some chrootkit
    warnings. These packages should not be used as dependencies, and do not
    depend on the Python interpreter.  For dependencies, the existing
    python3-gdbm and python3-tk packages should be used.

 -- Matthias Klose <doko@debian.org>  Wed, 21 Aug 2024 11:23:04 +0200

python3.13 (3.13.0~rc1-1) unstable; urgency=medium

  * Python 3.13.0 release candidate 1.
  * Don't pass -specs=package-metadata.specs.
  * Don't mention 2to3 in package description anymore. Closes: #1077957.
  * Prefix patches for python3-minimal with 'min-'.
  * libpython-stdlib: Include the _gdbm and _tkinter extensions, prefixed
    with a dot, and no dependencies on the gbm and tcl/tk libraries.
  * Update symbols files.

 -- Matthias Klose <doko@debian.org>  Tue, 06 Aug 2024 08:03:09 +0200

python3.13 (3.13.0~b4-1) unstable; urgency=medium

  [ Stefano Rivera ]
  * New upstream beta.