@@ -40,7 +40,7 @@ Forwarded: not-needed
 +
  
  __all__ = ["version", "bootstrap"]
- _PIP_VERSION = "24.1.1"
+ _PIP_VERSION = "24.2"
 @@ -130,6 +158,11 @@
  
      Note that calling this function will alter both sys.path and os.environ.
