@@ -7,7 +7,7 @@ Forwarded: no
 
 --- a/configure.ac
 +++ b/configure.ac
-@@ -3426,8 +3426,8 @@
+@@ -3467,8 +3467,8 @@
  		LDSHARED='$(CC) -shared'
  		LDCXXSHARED='$(CXX) -shared';;
  	Linux*|GNU*|QNX*|VxWorks*|Haiku*)
@@ -18,7 +18,7 @@ Forwarded: no
  	FreeBSD*)
  		if [[ "`$CC -dM -E - </dev/null | grep __ELF__`" != "" ]]
  		then
-@@ -3539,7 +3539,7 @@
+@@ -3580,7 +3580,7 @@
  	    LINKFORSHARED="-Wl,-E -Wl,+s";;
  #	    LINKFORSHARED="-Wl,-E -Wl,+s -Wl,+b\$(BINLIBDEST)/lib-dynload";;
  	Linux-android*) LINKFORSHARED="-pie -Xlinker -export-dynamic";;
