@@ -1,6 +1,7 @@
 python3.13 (3.13.0~rc2-1) UNRELEASED; urgency=medium
 
   * Python 3.13.0 release candidate 2.
+  * Refresh patches.
 
  -- Stefano Rivera <stefanor@debian.org>  Sat, 07 Sep 2024 08:50:45 +0200
 
